--- a/README.yml
+++ b/README.yml
@@ -1,6 +1,6 @@
 ---
 owner:
-  firstname: "TBD"
-  lastname: "TBD"
+  firstname: "Hely"
+  lastname: " Modi"
   hid: "fa19-516-149"
   community: "e516"
